# hackeurope26

./: .gitignore  CLAUDE.md  README.md  REPRODUCING.md  REPRODUCING1.md  config.yaml  main.py  requirements.txt
carbon-router/: Cargo.toml  README.md  config.toml  visualizer.html
carbon-router/src/: carbon.rs  config.rs  latency.rs  main.rs  proxy.rs  router.rs  state.rs
carbondemo/: demo.py
frontend/: app.py  requirements.txt
frontend/static/: app.js
frontend/templates/: index.html
guides/: default_optimizations.md
infra/: Pulumi.dev.yaml  Pulumi.us.yaml  Pulumi.yaml  index.ts  package-lock.json  package.json  run-eval.sh  schema.sql  setup-db.sh
modules/hamer/: Dockerfile.baseline  Dockerfile.baseline.slim  Dockerfile.optimized  Dockerfile.optimized.slim  deploy.sh  deploy_slim.sh  entrypoint.sh  k8s-eval-job.yaml  upload_deps_to_gcs.sh
modules/raft/: Dockerfile.baseline.slim  Dockerfile.optimized.slim  deploy_slim.sh  entrypoint.sh  eval_bench.py  k8s-baseline-a100-job.yaml  k8s-baseline-a100-us-job.yaml  k8s-baseline-job.yaml  k8s-baseline-rtx6000-job.yaml  k8s-baseline-rtx6000-us-job.yaml  k8s-baseline-t4-job.yaml  k8s-optimized-a100-job.yaml  k8s-optimized-a100-us-job.yaml  k8s-optimized-job.yaml  k8s-optimized-rtx6000-job.yaml  k8s-optimized-rtx6000-us-job.yaml  k8s-optimized-t4-job.yaml
src/: analyzer.py  bench_db.py  benchmark.py  clone.py  db.py  docker_builder.py  metrics.py  optimizer.py  report.py  sci.py
src/cloud/: base.py  registry.py  runpod.py
templates/: Dockerfile.base.j2  benchmark_entrypoint.sh.j2
(+9 files in other folders)
